--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h3>这是一个HTML文件</h3>
+	<h3>这是一个已修改的HTML文件</h3>
 </body>
 </html>
