--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Git  </title>
+	<title >Git  </title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h3>这是一个已修 改的HTML文件</h3>
+	<h3>这是一个HTML文件</h3>
 </body>
 </html>
